# jobcomp_report

./: .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.deb  Dockerfile.rpm  README.md  package.cmake
.github/workflows/: check-versions.yml  main.yml
src/: api.c  api.h  jobcomp_report.c  jobcomp_report.h  slurm_utils.c  slurm_utils.h
